--- a/index.html
+++ b/index.html
@@ -64,20 +64,52 @@
     </style>
 </head>
 <body>
+<canvas>
+
+</canvas>
 <div class="matrix" id="matrix"></div>
 <div class="welcome-text">Bienvenue, Hacker !</div>
 
 <script>
-    const matrixContainer = document.getElementById('matrix');
-    const columns = window.innerWidth / 16;
+    // Initialising the canvas
+    var canvas = document.querySelector('canvas'),
+        ctx = canvas.getContext('2d');
 
-    for (let i = 0; i < columns; i++) {
-        const matrixColumn = document.createElement('div');
-        const text = '0123456789ABCDEFGHIJKLMNOPQRSTUVXYZ';
-        matrixColumn.innerText = text.repeat(20).split('').sort(() => Math.random() - 0.5).join('');
-        matrixColumn.style.left = `${i * 16}px`;
-        matrixContainer.appendChild(matrixColumn);
+    // Setting the width and height of the canvas
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    // Setting up the letters
+    var letters = 'ABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZ';
+    letters = letters.split('');
+
+    // Setting up the columns
+    var fontSize = 10,
+        columns = canvas.width / fontSize;
+
+    // Setting up the drops
+    var drops = [];
+    for (var i = 0; i < columns; i++) {
+        drops[i] = 1;
     }
+
+    // Setting up the draw function
+    function draw() {
+        ctx.fillStyle = 'rgba(0, 0, 0, .1)';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        for (var i = 0; i < drops.length; i++) {
+            var text = letters[Math.floor(Math.random() * letters.length)];
+            ctx.fillStyle = '#0f0';
+            ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+            drops[i]++;
+            if (drops[i] * fontSize > canvas.height && Math.random() > .95) {
+                drops[i] = 0;
+            }
+        }
+    }
+
+    // Loop the animation
+    setInterval(draw, 33);
 </script>
 </body>
 </html>
