--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Hacker Style</title>
+    <title> ------====> G6G <====------ </title>
     <style>
         body, html {
             margin: 0;
