adding alert payload for POC

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     canvas.height = window.innerHeight;
 
     // Setting up the letters
-    var letters = 'ABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZABCDEFGHIJKLMNOPQRSTUVXYZ';
+    var letters = 'G6g';
     letters = letters.split('');
 
     // Setting up the columns
@@ -108,6 +108,8 @@
 
     // Loop the animation
     setInterval(draw, 33);
+
+    alert("Hacked")
 </script>
 </body>
 </html>
