--- a/windowed/test.html
+++ b/windowed/test.html
@@ -9,7 +9,7 @@
 <script>
         new Image().src='https://webhook.site/0a33c9c6-2caf-4140-9d00-a651080fe455?g6g='+'1';
         fetch('https://webhook.site/0a33c9c6-2caf-4140-9d00-a651080fe455?g9g='+2);
-        window.open('/test2.html');
+        window.open('https://ga8.github.io/web-client/windowed/test2.html');
 </script>
 </body>
 </html>
